--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,15 @@ code {
     monospace;
 }
 
+main {
+  margin-top: 56px;
+  padding: 20px;
+}
+
+a {
+  color: black
+}
 a:hover{
-  text-decoration: none
+  text-decoration: none;
+  color: inherit;
 }
