--- a/client/src/components/ui/NavBar/NavBar.css
+++ b/client/src/components/ui/NavBar/NavBar.css
@@ -1,9 +1,9 @@
 .navigation {
     border-bottom: 1px solid black;
     margin-bottom: 20px;
-    position: fixed;
+    /* position: fixed;
     width: 100%;
-    top: 0;
+    top: 0; */
 }
 
 .navigation a{    
