--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Sen', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -13,8 +13,9 @@ code {
 }
 
 main {
-  margin-top: 56px;
-  padding: 20px;
+  /* margin-top: 56px; */
+width: 100vw;
+height: 100vh;  
 }
 
 a {
@@ -23,4 +24,34 @@ a {
 a:hover{
   text-decoration: none;
   color: inherit;
+}
+
+h1{
+  font-size: 3.5rem;
+  margin-bottom: 20px;
+}
+
+.greenButton{
+  background-color: #90bc9a;
+  color: white;
+  padding: 5px 10px;
+  border-color: #90bc9a;
+  border-radius: 6px;
+}
+
+.greenButton:hover{
+  color: #90bc9a;
+  background-color: white;
+  border-color: 90bc9a;
+}
+
+.bgImage{
+background-image: url('https://res.cloudinary.com/dkbpijai0/image/upload/v1584045702/heart_uymq6e.jpg');
+width: 100vw;
+height: 100vh;  
+background-size: cover;
+background-repeat: no-repeat;
+background-position-x: right;
+background-position-y: -15%;
+opacity: 0.9;
 }
