--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,3 +56,11 @@ background-position-y: -40%;
 opacity: 0.9;
 z-index: -1000;
 }
+
+.bgGrey {
+  background-color: #f8f9fa;
+}
+.bgGrey h4 {
+  padding-top: 20px;
+  padding-left: 16px
+}
